--- a/Project1/angular.json
+++ b/Project1/angular.json
@@ -39,7 +39,8 @@
             "prerender": true,
             "ssr": {
               "entry": "src/server.ts"
-            }
+            },
+            "sourceMap": true
           },
           "configurations": {
             "production": {
@@ -63,7 +64,7 @@
               "sourceMap": true
             }
           },
-          "defaultConfiguration": "production"
+          "defaultConfiguration": "production"          
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
